parser.output
Terminals unused in grammar

   ERROR


State 25 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 175 conflicts: 2 reduce/reduce
State 178 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 226 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 global_decl_list

    3 global_decl_list: global_decl_list global_decl
    4                 | /* empty */

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 $@2: /* empty */

    8 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE

    9 $@3: /* empty */

   10 function_decl: type ID MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type ID MK_LPAREN MK_RPAREN MK_SEMICOLON

   13 param_list: param_list MK_COMMA param
   14           | param

   15 param: type ID
   16      | struct_type ID
   17      | type ID dim_fn
   18      | struct_type ID dim_fn

   19 dim_fn: MK_LB expr_null MK_RB dimfn1

   20 dimfn1: MK_LB expr MK_RB dimfn1
   21       | /* empty */

   22 expr_null: expr
   23          | /* empty */

   24 block: decl_list stmt_list
   25      | stmt_list
   26      | decl_list
   27      | /* empty */

   28 decl_list: decl_list decl
   29          | decl

   30 decl: type_decl
   31     | var_decl

   32 type_decl: TYPEDEF type id_list MK_SEMICOLON
   33          | TYPEDEF VOID id_list MK_SEMICOLON
   34          | TYPEDEF struct_type id_list MK_SEMICOLON
   35          | struct_type MK_SEMICOLON

   36 var_decl: type init_id_list MK_SEMICOLON
   37         | struct_type id_list MK_SEMICOLON
   38         | ID id_list MK_SEMICOLON

   39 type: INT
   40     | FLOAT
   41     | VOID
   42     | error

   43 struct_type: STRUCT tag

   44 $@4: /* empty */

   45 tag: ID MK_LBRACE $@4 decl_list MK_RBRACE

   46 $@5: /* empty */

   47 tag: MK_LBRACE $@5 decl_list MK_RBRACE

   48 $@6: /* empty */

   49 tag: ID MK_LBRACE $@6 MK_RBRACE

   50 $@7: /* empty */

   51 tag: MK_LBRACE $@7 MK_RBRACE
   52    | ID

   53 id_list: ID
   54        | id_list MK_COMMA ID
   55        | id_list MK_COMMA ID dim_decl
   56        | ID dim_decl

   57 dim_decl: MK_LB cexpr MK_RB
   58         | dim_decl MK_LB cexpr MK_RB

   59 cexpr: cexpr add_op mcexpr
   60      | mcexpr

   61 mcexpr: mcexpr mul_op cfactor
   62       | cfactor

   63 cfactor: CONST
   64        | MK_LPAREN cexpr MK_RPAREN

   65 init_id_list: init_id
   66             | init_id_list MK_COMMA init_id

   67 init_id: ID
   68        | ID dim_decl
   69        | ID OP_ASSIGN relop_expr

   70 stmt_list: stmt_list stmt
   71          | stmt

   72 $@8: /* empty */

   73 stmt: MK_LBRACE $@8 block MK_RBRACE
   74     | WHILE MK_LPAREN relop_expr_list MK_RPAREN stmt
   75     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   76     | IF MK_LPAREN relop_expr MK_RPAREN stmt ELSE stmt
   77     | IF MK_LPAREN relop_expr MK_RPAREN stmt
   78     | function_call
   79     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   80     | relop_expr_list MK_SEMICOLON
   81     | MK_SEMICOLON
   82     | RETURN MK_SEMICOLON
   83     | RETURN relop_expr MK_SEMICOLON

   84 function_call: ID MK_LPAREN relop_expr_list MK_RPAREN

   85 assign_expr_list: nonempty_assign_expr_list
   86                 | /* empty */

   87 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   88                          | assign_expr

   89 $@9: /* empty */

   90 assign_expr: ID $@9 OP_ASSIGN relop_expr
   91            | relop_expr

   92 relop_expr: relop_term
   93           | relop_expr OP_OR relop_term

   94 relop_term: relop_factor
   95           | relop_term OP_AND relop_factor

   96 relop_factor: expr
   97             | expr rel_op expr

   98 rel_op: OP_LT
   99       | OP_LE
  100       | OP_GT
  101       | OP_GE
  102       | OP_EQ
  103       | OP_NE

  104 relop_expr_list: nonempty_relop_expr_list
  105                | /* empty */

  106 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
  107                         | relop_expr

  108 expr: expr add_op term
  109     | term

  110 add_op: OP_PLUS
  111       | OP_MINUS

  112 term: term mul_op factor
  113     | factor

  114 mul_op: OP_TIMES
  115       | OP_DIVIDE

  116 factor: MK_LPAREN relop_expr MK_RPAREN
  117       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
  118       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
  119       | CONST
  120       | OP_NOT CONST
  121       | OP_MINUS CONST
  122       | function_call

  123 $@10: /* empty */

  124 factor: OP_NOT ID $@10 MK_LPAREN relop_expr_list MK_RPAREN

  125 $@11: /* empty */

  126 factor: OP_MINUS ID $@11 MK_LPAREN relop_expr_list MK_RPAREN
  127       | var_ref
  128       | OP_NOT var_ref
  129       | OP_MINUS var_ref

  130 var_ref: ID
  131        | var_ref dim
  132        | var_ref struct_tail

  133 dim: MK_LB expr MK_RB

  134 struct_tail: MK_DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256) 42
ID (258) 8 10 11 12 15 16 17 18 38 45 49 52 53 54 55 56 67 68 69 84
    90 124 126 130 134
CONST (259) 63 119 120 121
VOID (260) 33 41
INT (261) 39
FLOAT (262) 40
IF (263) 76 77
ELSE (264) 76
WHILE (265) 74
FOR (266) 75
STRUCT (267) 43
TYPEDEF (268) 32 33 34
OP_ASSIGN (269) 69 79 90
OP_OR (270) 93
OP_AND (271) 95
OP_NOT (272) 117 120 124 128
OP_EQ (273) 102
OP_NE (274) 103
OP_GT (275) 100
OP_LT (276) 98
OP_GE (277) 101
OP_LE (278) 99
OP_PLUS (279) 110
OP_MINUS (280) 111 118 121 126 129
OP_TIMES (281) 114
OP_DIVIDE (282) 115
MK_LB (283) 19 20 57 58 133
MK_RB (284) 19 20 57 58 133
MK_LPAREN (285) 8 10 11 12 64 74 75 76 77 84 116 117 118 124 126
MK_RPAREN (286) 8 10 11 12 64 74 75 76 77 84 116 117 118 124 126
MK_LBRACE (287) 8 10 45 47 49 51 73
MK_RBRACE (288) 8 10 45 47 49 51 73
MK_COMMA (289) 13 54 55 66 87 106
MK_SEMICOLON (290) 11 12 32 33 34 35 36 37 38 75 79 80 81 82 83
MK_DOT (291) 134
ERROR (292)
RETURN (293) 82 83


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 2, on right: 0
$@1 (41)
    on left: 1, on right: 2
global_decl_list (42)
    on left: 3 4, on right: 2 3
global_decl (43)
    on left: 5 6, on right: 3
function_decl (44)
    on left: 8 10 11 12, on right: 5 6
$@2 (45)
    on left: 7, on right: 8
$@3 (46)
    on left: 9, on right: 10
param_list (47)
    on left: 13 14, on right: 8 11 13
param (48)
    on left: 15 16 17 18, on right: 13 14
dim_fn (49)
    on left: 19, on right: 17 18
dimfn1 (50)
    on left: 20 21, on right: 19 20
expr_null (51)
    on left: 22 23, on right: 19
block (52)
    on left: 24 25 26 27, on right: 8 10 73
decl_list (53)
    on left: 28 29, on right: 5 24 26 28 45 47
decl (54)
    on left: 30 31, on right: 28 29
type_decl (55)
    on left: 32 33 34 35, on right: 30
var_decl (56)
    on left: 36 37 38, on right: 31
type (57)
    on left: 39 40 41 42, on right: 8 10 11 12 15 17 32 36
struct_type (58)
    on left: 43, on right: 16 18 34 35 37
tag (59)
    on left: 45 47 49 51 52, on right: 43
$@4 (60)
    on left: 44, on right: 45
$@5 (61)
    on left: 46, on right: 47
$@6 (62)
    on left: 48, on right: 49
$@7 (63)
    on left: 50, on right: 51
id_list (64)
    on left: 53 54 55 56, on right: 32 33 34 37 38 54 55
dim_decl (65)
    on left: 57 58, on right: 55 56 58 68
cexpr (66)
    on left: 59 60, on right: 57 58 59 64
mcexpr (67)
    on left: 61 62, on right: 59 60 61
cfactor (68)
    on left: 63 64, on right: 61 62
init_id_list (69)
    on left: 65 66, on right: 36 66
init_id (70)
    on left: 67 68 69, on right: 65 66
stmt_list (71)
    on left: 70 71, on right: 24 25 70
stmt (72)
    on left: 73 74 75 76 77 78 79 80 81 82 83, on right: 70 71 74 75
    76 77
$@8 (73)
    on left: 72, on right: 73
function_call (74)
    on left: 84, on right: 78 122
assign_expr_list (75)
    on left: 85 86, on right: 75
nonempty_assign_expr_list (76)
    on left: 87 88, on right: 85 87
assign_expr (77)
    on left: 90 91, on right: 87 88
$@9 (78)
    on left: 89, on right: 90
relop_expr (79)
    on left: 92 93, on right: 69 76 77 79 83 90 91 93 106 107 116 117
    118
relop_term (80)
    on left: 94 95, on right: 92 93 95
relop_factor (81)
    on left: 96 97, on right: 94 95
rel_op (82)
    on left: 98 99 100 101 102 103, on right: 97
relop_expr_list (83)
    on left: 104 105, on right: 74 75 80 84 124 126
nonempty_relop_expr_list (84)
    on left: 106 107, on right: 104 106
expr (85)
    on left: 108 109, on right: 20 22 96 97 108 133
add_op (86)
    on left: 110 111, on right: 59 108
term (87)
    on left: 112 113, on right: 108 109 112
mul_op (88)
    on left: 114 115, on right: 61 112
factor (89)
    on left: 116 117 118 119 120 121 122 124 126 127 128 129, on right:
    112 113
$@10 (90)
    on left: 123, on right: 124
$@11 (91)
    on left: 125, on right: 126
var_ref (92)
    on left: 130 131 132, on right: 79 127 128 129 131 132
dim (93)
    on left: 133, on right: 131
struct_tail (94)
    on left: 134, on right: 132


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . global_decl_list

    $default  reduce using rule 4 (global_decl_list)

    global_decl_list  go to state 4


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 program: $@1 global_decl_list .
    3 global_decl_list: global_decl_list . global_decl

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    $end  reduce using rule 2 (program)

    global_decl    go to state 12
    function_decl  go to state 13
    decl_list      go to state 14
    decl           go to state 15
    type_decl      go to state 16
    var_decl       go to state 17
    type           go to state 18
    struct_type    go to state 19


State 5

   42 type: error .

    $default  reduce using rule 42 (type)


State 6

   38 var_decl: ID . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 21


State 7

   41 type: VOID .

    $default  reduce using rule 41 (type)


State 8

   39 type: INT .

    $default  reduce using rule 39 (type)


State 9

   40 type: FLOAT .

    $default  reduce using rule 40 (type)


State 10

   43 struct_type: STRUCT . tag

    ID         shift, and go to state 22
    MK_LBRACE  shift, and go to state 23

    tag  go to state 24


State 11

   32 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   33          | TYPEDEF . VOID id_list MK_SEMICOLON
   34          | TYPEDEF . struct_type id_list MK_SEMICOLON

    error   shift, and go to state 5
    VOID    shift, and go to state 25
    INT     shift, and go to state 8
    FLOAT   shift, and go to state 9
    STRUCT  shift, and go to state 10

    type         go to state 26
    struct_type  go to state 27


State 12

    3 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 3 (global_decl_list)


State 13

    6 global_decl: function_decl .

    $default  reduce using rule 6 (global_decl)


State 14

    5 global_decl: decl_list . function_decl
   28 decl_list: decl_list . decl

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    function_decl  go to state 28
    decl           go to state 29
    type_decl      go to state 16
    var_decl       go to state 17
    type           go to state 18
    struct_type    go to state 19


State 15

   29 decl_list: decl .

    $default  reduce using rule 29 (decl_list)


State 16

   30 decl: type_decl .

    $default  reduce using rule 30 (decl)


State 17

   31 decl: var_decl .

    $default  reduce using rule 31 (decl)


State 18

    8 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE
   10              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type . ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type . ID MK_LPAREN MK_RPAREN MK_SEMICOLON
   36 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 30

    init_id_list  go to state 31
    init_id       go to state 32


State 19

   35 type_decl: struct_type . MK_SEMICOLON
   37 var_decl: struct_type . id_list MK_SEMICOLON

    ID            shift, and go to state 20
    MK_SEMICOLON  shift, and go to state 33

    id_list  go to state 34


State 20

   53 id_list: ID .
   56        | ID . dim_decl

    MK_LB  shift, and go to state 35

    $default  reduce using rule 53 (id_list)

    dim_decl  go to state 36


State 21

   38 var_decl: ID id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 38


State 22

   45 tag: ID . MK_LBRACE $@4 decl_list MK_RBRACE
   49    | ID . MK_LBRACE $@6 MK_RBRACE
   52    | ID .

    MK_LBRACE  shift, and go to state 39

    $default  reduce using rule 52 (tag)


State 23

   47 tag: MK_LBRACE . $@5 decl_list MK_RBRACE
   51    | MK_LBRACE . $@7 MK_RBRACE

    MK_RBRACE  reduce using rule 50 ($@7)
    $default   reduce using rule 46 ($@5)

    $@5  go to state 40
    $@7  go to state 41


State 24

   43 struct_type: STRUCT tag .

    $default  reduce using rule 43 (struct_type)


State 25

   33 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON
   41 type: VOID .

    ID  shift, and go to state 20

    ID  [reduce using rule 41 (type)]

    id_list  go to state 42


State 26

   32 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 43


State 27

   34 type_decl: TYPEDEF struct_type . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 44


State 28

    5 global_decl: decl_list function_decl .

    $default  reduce using rule 5 (global_decl)


State 29

   28 decl_list: decl_list decl .

    $default  reduce using rule 28 (decl_list)


State 30

    8 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE
   10              | type ID . MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type ID . MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type ID . MK_LPAREN MK_RPAREN MK_SEMICOLON
   67 init_id: ID .
   68        | ID . dim_decl
   69        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 45
    MK_LB      shift, and go to state 35
    MK_LPAREN  shift, and go to state 46

    $default  reduce using rule 67 (init_id)

    dim_decl  go to state 47


State 31

   36 var_decl: type init_id_list . MK_SEMICOLON
   66 init_id_list: init_id_list . MK_COMMA init_id

    MK_COMMA      shift, and go to state 48
    MK_SEMICOLON  shift, and go to state 49


State 32

   65 init_id_list: init_id .

    $default  reduce using rule 65 (init_id_list)


State 33

   35 type_decl: struct_type MK_SEMICOLON .

    $default  reduce using rule 35 (type_decl)


State 34

   37 var_decl: struct_type id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 50


State 35

   57 dim_decl: MK_LB . cexpr MK_RB

    CONST      shift, and go to state 51
    MK_LPAREN  shift, and go to state 52

    cexpr    go to state 53
    mcexpr   go to state 54
    cfactor  go to state 55


State 36

   56 id_list: ID dim_decl .
   58 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 56

    $default  reduce using rule 56 (id_list)


State 37

   54 id_list: id_list MK_COMMA . ID
   55        | id_list MK_COMMA . ID dim_decl

    ID  shift, and go to state 57


State 38

   38 var_decl: ID id_list MK_SEMICOLON .

    $default  reduce using rule 38 (var_decl)


State 39

   45 tag: ID MK_LBRACE . $@4 decl_list MK_RBRACE
   49    | ID MK_LBRACE . $@6 MK_RBRACE

    MK_RBRACE  reduce using rule 48 ($@6)
    $default   reduce using rule 44 ($@4)

    $@4  go to state 58
    $@6  go to state 59


State 40

   47 tag: MK_LBRACE $@5 . decl_list MK_RBRACE

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    decl_list    go to state 60
    decl         go to state 15
    type_decl    go to state 16
    var_decl     go to state 17
    type         go to state 61
    struct_type  go to state 19


State 41

   51 tag: MK_LBRACE $@7 . MK_RBRACE

    MK_RBRACE  shift, and go to state 62


State 42

   33 type_decl: TYPEDEF VOID id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 63


State 43

   32 type_decl: TYPEDEF type id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 64


State 44

   34 type_decl: TYPEDEF struct_type id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 65


State 45

   69 init_id: ID OP_ASSIGN . relop_expr

    ID         shift, and go to state 66
    CONST      shift, and go to state 67
    OP_NOT     shift, and go to state 68
    OP_MINUS   shift, and go to state 69
    MK_LPAREN  shift, and go to state 70

    function_call  go to state 71
    relop_expr     go to state 72
    relop_term     go to state 73
    relop_factor   go to state 74
    expr           go to state 75
    term           go to state 76
    factor         go to state 77
    var_ref        go to state 78


State 46

    8 function_decl: type ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE
   10              | type ID MK_LPAREN . MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type ID MK_LPAREN . param_list MK_RPAREN MK_SEMICOLON
   12              | type ID MK_LPAREN . MK_RPAREN MK_SEMICOLON

    error      shift, and go to state 5
    VOID       shift, and go to state 7
    INT        shift, and go to state 8
    FLOAT      shift, and go to state 9
    STRUCT     shift, and go to state 10
    MK_RPAREN  shift, and go to state 79

    param_list   go to state 80
    param        go to state 81
    type         go to state 82
    struct_type  go to state 83


State 47

   58 dim_decl: dim_decl . MK_LB cexpr MK_RB
   68 init_id: ID dim_decl .

    MK_LB  shift, and go to state 56

    $default  reduce using rule 68 (init_id)


State 48

   66 init_id_list: init_id_list MK_COMMA . init_id

    ID  shift, and go to state 84

    init_id  go to state 85


State 49

   36 var_decl: type init_id_list MK_SEMICOLON .

    $default  reduce using rule 36 (var_decl)


State 50

   37 var_decl: struct_type id_list MK_SEMICOLON .

    $default  reduce using rule 37 (var_decl)


State 51

   63 cfactor: CONST .

    $default  reduce using rule 63 (cfactor)


State 52

   64 cfactor: MK_LPAREN . cexpr MK_RPAREN

    CONST      shift, and go to state 51
    MK_LPAREN  shift, and go to state 52

    cexpr    go to state 86
    mcexpr   go to state 54
    cfactor  go to state 55


State 53

   57 dim_decl: MK_LB cexpr . MK_RB
   59 cexpr: cexpr . add_op mcexpr

    OP_PLUS   shift, and go to state 87
    OP_MINUS  shift, and go to state 88
    MK_RB     shift, and go to state 89

    add_op  go to state 90


State 54

   60 cexpr: mcexpr .
   61 mcexpr: mcexpr . mul_op cfactor

    OP_TIMES   shift, and go to state 91
    OP_DIVIDE  shift, and go to state 92

    $default  reduce using rule 60 (cexpr)

    mul_op  go to state 93


State 55

   62 mcexpr: cfactor .

    $default  reduce using rule 62 (mcexpr)


State 56

   58 dim_decl: dim_decl MK_LB . cexpr MK_RB

    CONST      shift, and go to state 51
    MK_LPAREN  shift, and go to state 52

    cexpr    go to state 94
    mcexpr   go to state 54
    cfactor  go to state 55


State 57

   54 id_list: id_list MK_COMMA ID .
   55        | id_list MK_COMMA ID . dim_decl

    MK_LB  shift, and go to state 35

    $default  reduce using rule 54 (id_list)

    dim_decl  go to state 95


State 58

   45 tag: ID MK_LBRACE $@4 . decl_list MK_RBRACE

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    decl_list    go to state 96
    decl         go to state 15
    type_decl    go to state 16
    var_decl     go to state 17
    type         go to state 61
    struct_type  go to state 19


State 59

   49 tag: ID MK_LBRACE $@6 . MK_RBRACE

    MK_RBRACE  shift, and go to state 97


State 60

   28 decl_list: decl_list . decl
   47 tag: MK_LBRACE $@5 decl_list . MK_RBRACE

    error      shift, and go to state 5
    ID         shift, and go to state 6
    VOID       shift, and go to state 7
    INT        shift, and go to state 8
    FLOAT      shift, and go to state 9
    STRUCT     shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    MK_RBRACE  shift, and go to state 98
